--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,43 @@
+
+
+body{
+  background-color: rgb(0, 195, 255);
+}
+
+#logo{
+  width: 100%;
+  text-align: center;
+}
+
+#form_holder{
+  color: rgb(255, 251, 0);
+  text-align: center;
+  border: 4px solid rgb(43, 43, 43);
+  border-radius: 15px;
+  background-image: url(./images/BackGround2.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
+}
+
+#form_holder button{
+  margin: 10px;
+}
+
+#board_holder table{
+  background-color: white;
+  border: 2px solid rgb(0, 0, 0);
+}
+
+#table_holder table{
+  color: rgb(255, 251, 0);
+  border: 3px solid rgb(43, 43, 43);
+  background-image: url(./images/BackGround.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+
 table,
 tr,
 td,
@@ -9,6 +49,7 @@ th {
 
 table {
   width: 90%;
+
   margin: 0 auto;
 }
 
@@ -19,10 +60,11 @@ table {
 }
 
 #board td {
-  width: 10px;
-  height: 10px;
   padding: 10px;
-  /* background-color: gray; */
+  /* background-color: rgb(90, 90, 90); */
+  /* background-image: url(./images/BackGround.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%; */
 }
 
 #board td:hover{
@@ -31,6 +73,7 @@ table {
 
 #board td.sea {
   background-color: aqua;
+  
 }
 
 #board td.hit {
