--- a/styles/index.css
+++ b/styles/index.css
@@ -61,10 +61,10 @@ table {
 
 #board td {
   padding: 10px;
-  /* background-color: rgb(90, 90, 90); */
-  /* background-image: url(./images/BackGround.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%; */
+  background-color: rgb(90, 90, 90);
+    /* background-image: url(./images/BackGround.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%; */
 }
 
 #board td:hover{
@@ -78,4 +78,7 @@ table {
 
 #board td.hit {
   background-color: brown;
+}
+#board td.destroy {
+  background-color: rgb(255, 0, 0);
 }
