--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,13 @@
 
 
 body{
-  background-color: rgb(0, 195, 255);
+  background-color: rgb(146, 162, 167);
 }
 
 #logo{
   width: 100%;
   text-align: center;
+  
 }
 
 #form_holder{
@@ -25,6 +26,7 @@ body{
 
 #form_holder button{
   margin: 10px;
+ 
 }
 
 #board_holder table{
@@ -35,13 +37,34 @@ body{
 
 #table_holder table{
   color: rgb(255, 251, 0);
-  border: 3px solid rgb(43, 43, 43);
+  border: 7px solid rgb(43, 43, 43);
   background-image: url(./images/BackGround.jpg);
-  background-repeat: no-repeat;
   background-size: 100% 100%;
   font-weight: 900;
+  font-family:	Copperplate;
+  width: 100%;
+
+
 
 }
+
+
+.form-input label{
+  display: block;
+  margin: 10px auto ;
+  font-weight: 900;
+  font-size: 20px;
+  font-style: normal;
+
+}
+.form-input > input{
+  font-size: 10x;
+  margin: 6px auto ;
+  font-weight: 900;
+  background: linear-gradient(#cee83b, #ffdf11, #ff7715, #e7e1e0);
+
+}
+
 
 table,
 tr,
@@ -66,18 +89,18 @@ table {
 
 #board td {
   padding: 10px;
-  /* background-color: rgb(90, 90, 90);
+  /* /* background-color: rgb(90, 90, 90);
     background-image: url(./images/BackGround.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%; */
-}
+} 
 
 #board td:hover{
   cursor: pointer;
 }
 
 #board td.sea {
-  /* background-color: aqua; */
+  background-color: aqua;
   background-image: url(./images/Wave3.gif);
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -101,9 +124,9 @@ table {
   align-items: center;
   position: relative;
   padding: 0em 3.3em;
-  border: rgb(8, 9, 6) solid 0.15em;
+  border: rgb(16, 15, 15) solid 0.15em;
   border-radius: 0.25em;
-  color: rgb(250, 221, 30);
+  color: rgb(212, 108, 29);
   font-size: 1.5em;
   font-weight: 900;
   cursor: pointer;
@@ -119,11 +142,12 @@ table {
 }
 
 .button:hover {
-  color: #212121;
+  color: #c92626;
+
 }
 
 .button:active {
-  border-color: rgb(143, 136, 73);
+  border-color: rgb(232, 232, 55);
 }
 
 .button::after, .button::before {
@@ -131,7 +155,7 @@ table {
   position: absolute;
   width: 10em;
   aspect-ratio: 1;
-  background: rgb(241, 241, 26);
+  background: rgb(233, 228, 67);
   opacity: 50%;
   border-radius: 50%;
   transition: transform 500ms, background 300ms;
@@ -158,11 +182,42 @@ table {
 
 .button:active:before,
 .button:active:after {
-  background: rgb(235, 188, 17);
+  background: rgb(223, 183, 38);
 }
 
 @keyframes Animation { 
   0%{background-position:100% 10%}
   50%{background-position:100% -5%}
   100%{background-position:100% 10%}
+}
+
+#amountTable {
+  width: 10%;
+  border-collapse: collapse;
+ 
+}
+
+#amountTable th, #amountTable td {
+  border: 1px solid #2e2c2c;
+  padding: 8px;
+  text-align: left;
+  font-size: 20px;
+  
+}
+
+#amountTable th {
+  background: linear-gradient(#e8e04d, #ffdf11, #ff7715, #ff2b0f);
+}
+
+#amountTable tr:nth-child(even) {
+}
+ 
+#amountTable tr:hover {
+  background-color: #2c2626;
+}
+
+#amountTable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  color: rgb(52, 48, 48);
 }
