--- a/styles/index.css
+++ b/styles/index.css
@@ -20,9 +20,6 @@ body{
   background-size: 100% 100%;
   font-family: 'balthazar' ;
   font-size:large;
-  
-  font-weight: 400; 
-
 
 }
 
@@ -50,9 +47,10 @@ body{
 }
 
 #board_holder table{
-  background-color: white;
+  background-color: rgb(52, 52, 52);
   border: 2px solid rgb(0, 0, 0);
-  font-family: "Secular One", sans-serif;
+    font-family: 'balthazar' ;
+  font-size:large;
 }
 
 #table_holder table{
@@ -109,6 +107,8 @@ table {
 }
 
 #board td {
+  height: 20px;
+  width: 20px;
   padding: 10px;
   /* /* background-color: rgb(90, 90, 90);
     background-image: url(./images/BackGround.jpg);
