--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,27 @@ body{
   
 }
 
+#boomEffect{
+  display: none;
+  position: absolute;
+  width: 200px;
+  height: 150px;
+  background-image: url(./images/Boom4.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  animation: BoomAnim 0.9s ease-in;
+  
+}
+
+
+
+@keyframes BoomAnim{
+  0%{opacity: 0.2; scale: 0;}
+  70%{opacity: 1; scale: 0.9; transform: translateY(-80px);}
+  100%{opacity: 0; scale: 1; transform: translateY(-100px);}
+  
+}
+
 #form_holder{
   color: rgb(200, 198, 34);
   text-align: center;
@@ -63,8 +84,6 @@ body{
   width: 100%;
 }
 
-
-
 .form-input label{
   display: block;
   margin: 10px auto ;
@@ -110,10 +129,6 @@ table {
   height: 20px;
   width: 20px;
   padding: 10px;
-  /* /* background-color: rgb(90, 90, 90);
-    background-image: url(./images/BackGround.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%; */
 } 
 
 #board td:hover{
@@ -139,8 +154,6 @@ table {
   background-size: 300% 400%;
   animation: Animation 1s ease-in infinite;
 }
-
-
 
 
 #board_holder
